# web-development

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
common/: Cargo.toml
common/src/error/: db_err.rs  mod.rs
core/: Cargo.toml
db/: Cargo.toml
db/src/: connect.rs  lib.rs
db/src/entity/: book_managers.rs  books.rs  borrow_records.rs  prelude.rs  users.rs  (+1 more)
middleware/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20240511_061642_create_users_table.rs  m20240511_061707_create_books_table.rs  m20240511_061941_create_book_managers_table.rs  m20240511_063003_create_borrow_records_table.rs  m20240511_064305_create_book_counts_view.rs  m20240511_073422_create_available_book_counts_view.rs  m20240511_083253_init_db.rs
migration/src/entity/: mod.rs  sea_orm_active_enums.rs
migration/src/json/: BookManagers.json  Books.json  BorrowRecords.json  Users.json
migration/src/sql/: m20240511_061642_create_users_table.rs_down.SQL  m20240511_061642_create_users_table.rs_up.SQL  m20240511_061707_create_books_table.rs_down.SQL  m20240511_061707_create_books_table.rs_up.SQL  m20240511_061941_create_book_managers_table.rs_down.SQL  m20240511_061941_create_book_managers_table.rs_up.SQL  m20240511_063003_create_borrow_records_table.rs_down.SQL  m20240511_063003_create_borrow_records_table.rs_up.SQL  m20240511_064305_create_book_counts_view.rs_down.SQL  m20240511_064305_create_book_counts_view.rs_up.SQL  m20240511_073422_create_available_book_counts_view.rs_down.SQL  m20240511_073422_create_available_book_counts_view.rs_up.SQL
src/: main.rs
