[package]
name = "web-development"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".", "api", "common", "core", "db", "middleware", "migration"]

[dependencies]
api = {path = "api"}
tokio = { workspace = true }
dotenv = "0.15.0"



[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.201", features = ["derive"] }
sea-orm = {version = "0.12.15",features = ["macros","sqlx-mysql","runtime-tokio-rustls"]}
serde_json = "1.0.117"
